# webhook

./: .gitignore  Cargo.toml  Dockerfile  README.md  example.config.yaml  example.dynamic.yaml
.github/workflows/: docker.yaml  release.yml
src/: auth.rs  config.rs  main.rs  model.rs
src/config/: dynamic.rs  loader.rs  mod.rs  parse.rs  static.rs
systemd/: webhook.service
